2013-01-24	Malignant Manor <malignantmanor@users.sourceforge.net>
	* gumps/Gump_manager.cc: Fix main_actor_can_act check that could be bypassed
	  if double click closes gumps was disabled.
	* exult.cc, gumps/Gump_button.h, gumps/misc_buttons.h: Allow left clicking
	  on a check mark even when the Avatar cannot move. This fixes bug
	  #3598889 "HP < 1 will not allow you to close gumps with the check mark".

2013-01-23	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* actors.cc: A few improvements to charm alignment, which is now generally
	  updated when alignment is and the NPC is not charmed. Inverted rev #7300
	  so that only goblins in goblin ville are always on the lookout for foes.
	  This matches the originals, in which only combat and patrol schedules will
	  seek foes and fixes bug #3601595 "Bee's in Bee Cave Hostile before picking
	  up honey".
	Rev 7323
	* gamewin.cc: Fixed bug #3601596 "Music in Bee Cave conflict".
	Rev 7324
	* actions.*: Improved pickup/put down action to show the standing frame at
	  the end. Added new action to change the shape, frame and quality of a game
	  object.
	* paths.*: Added pathfinder to approach an object or actor that takes into
	  consideration the size of the destination.
	* actors.*: Added optional override for schedule location. This is mainly
	  useful for street maintenance schedule, so the NPC continues from where he
	  left off.
	* schedule.*, shapes/items.h, usecode/usefuns.h: Added 3 static methods to
	  Schedule class: one to procure an item (tries inventory first, then tries
	  to find a match nearby, then creates it as a last resort); one to create
	  a pick-up action sequence; and one to scan for the closest object in the
	  given object vector. Added light sources to street maintenance schedule,
	  so candles will be lit/put out/replaced as needed. Street maintenance will
	  now return the NPC to his/her pre-street maintenance position (for patrol